--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -3,15 +3,16 @@
 <head>
     <title>Results</title>
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sxshvnu1RVhK9JGjzrPFoXz9ZGXRPp6nE2HCNnfclgMzABfDlO5qX6b0b2ERi1UZ" crossorigin="anonymous">
 </head>
 <body>
-    <h3>Best sales:</h2>
+    <h3>Best sales:</h3>
     <ul>
         {% for car in best_sales %}
             <li>{{ car }}</li>
         {% endfor %}
     </ul>
-    <h3>List of cars:</h2>
+    <h3>List of cars:</h3>
     <ul>
         {% for car in car_list %}
             <li>{{ car }}</li>
